--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div class="left" style="width: 10%;height: 100%;float: left;">1</div>
         <div class="center" style="width: 80%;height: 100%;float: left;">2</div>
         <div class="right" style="width: 10%;height: 100%;">3</div>
+        xxx
     </div>
 </body>
 </html>
